src/objects/Associate_Flag__c.object
<CustomObject>
    <description>This object is for create a flag based on severity</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Associate Flags</relationshipLabel>
        <relationshipName>Associates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>Application Type</description>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Associate Flags</relationshipLabel>
        <relationshipName>Associates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to License Object</description>
        <label>Credential</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Associate Flags</relationshipLabel>
        <relationshipName>Associates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description for the flag to check</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Effective Date</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <formula>CASE(TEXT(Severity__c), 
&apos;Low&apos;, Image(&apos;/resource/Flag_Low&apos;, &apos;Good&apos;, 30, 30),
&apos;Medium&apos;, Image(&apos;/img/msg_icons/warning32.png&apos;, &apos;Warning&apos; , 30, 30),
&apos;High&apos;, Image(&apos;/img/msg_icons/error32.png&apos;, &apos;Bad&apos;, 30, 30),
&apos;Info&apos;, Image(&apos;/img/msg_icons/info32.png&apos;, &apos;Bad&apos;, 30, 30),
&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTO_Plan_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup for PTO/Plan Review(Permit Object)</description>
        <label>PTO/Plan Review</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Associate Flags</relationshipLabel>
        <relationshipName>Associates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Associate Flag</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A{0000}</displayFormat>
        <label>Flag Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associate Flags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>End_Date_Validation</fullName>
        <active>true</active>
        <description>End Date validation -- date can be future or today&apos;s date</description>
        <errorConditionFormula>End_Date__c &lt;  TODAY()</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>Cannot be Past date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Select_atleast_one_lookup</fullName>
        <active>false</active>
        <description>Ensure at least one of the following lookup fields is populated: Account, Contact, Credential, PTO/Plan Review.</description>
        <errorConditionFormula>AND( ISBLANK( Account__c ) , ISBLANK( Contact__c ) , ISBLANK( Credential__c ),  ISBLANK( PTO_Plan_Review__c ))</errorConditionFormula>
        <errorMessage>Ensure at least one of the following lookup fields is not blank: Account, Contact, Credential, PTO/Plan Review.</errorMessage>
    </validationRules>
</CustomObject>